package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

cc_library(
    name = "shi",
    hdrs = glob(["include/shi/**/*.hpp"]),
    includes = ["include"],
    copts = ['-std=gnu++20'],
)

cc_test(
    name = "tests",
    size = "small",
    srcs = glob(["tests/**/*.hpp", "tests/**/*.cpp"]),
    includes = ["include", "tests"],
    copts = ['-std=gnu++20'],
    deps = [
        ":shi",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
